# singularity

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  settings.gradle.kts
docs/: pyproject.toml
docs/src/: 404.rst  conf.py  index.rst  requirements.txt
docs/src/getting-started/: installation.rst
examples/swerve-drive-robot/: Constants.java
examples/swerve-drive-robot/subsystems/: DrivetrainSubsystem.java
singularity-cpp/: build.gradle.kts
singularity-cpp/src/main/cpp/: SwerveDrive.cpp
singularity-cpp/src/main/include/singularity/: SwerveDrive.hpp
singularity-cpp/src/main/include/singularity/imu/: CANCoderSwerveEncoder.hpp  SwerveIMU.hpp
singularity-kotlin/: build.gradle.kts
singularity-kotlin/src/main/kotlin/software/hibiscus/singularity/: SwerveDrive.kt  SwerveDriveConstants.kt  SwerveModule.kt  SwerveModuleConstants.kt
singularity-kotlin/src/main/kotlin/software/hibiscus/singularity/control/: PIDConstants.kt
singularity-kotlin/src/main/kotlin/software/hibiscus/singularity/encoder/: CANAndCoderSwerveEncoder.kt  CANCoderSwerveEncoder.kt  SwerveEncoder.kt  SwerveEncoderType.kt
singularity-kotlin/src/main/kotlin/software/hibiscus/singularity/imu/: NavXPort.kt  NavXPortType.kt  NavXSwerveIMU.kt  Pigeon2SwerveIMU.kt  SwerveIMU.kt  SwerveIMUType.kt
singularity-kotlin/src/main/kotlin/software/hibiscus/singularity/motor/: SparkMaxSwerveMotor.kt  SwerveMotor.kt  SwerveMotorType.kt  (+1 more)
singularity-kotlin/src/main/kotlin/systems/codexmiciro/singularity/: SwerveDrive.kt  SwerveDriveConstants.kt  SwerveModule.kt  SwerveModuleConstants.kt
(+12 files in other folders)
