[tool.poetry]
name = "singularity"
version = "0.1.0"
description = "A swerve drive library for FRC made easy."
authors = ["Hibiscus Software <cody@codexmicro.systems>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Sphinx = "^7.2.6"
furo = "^2023.9.10"
sphinx-autobuild = "^2021.3.14"
sphinx-design = "^0.5.0"
sphinxext-remoteliteralinclude = "^0.4.0"
sphinx-hoverxref = "^1.3.0"
sphinx-notfound-page = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
